fix(styles): update color variables for improved contrast in dark theme

--- a/apps/docs/src/assets/app.css
+++ b/apps/docs/src/assets/app.css
@@ -1,23 +1,23 @@
 :root[data-theme='dark'] {
-    --background: 240 4% 10%;
+    --background: 0 0% 9%;
     --foreground: 0 0% 98%;
   
-    --card: 240 4% 8%;
+    --card: 0 0% 14%;
     --card-foreground: 0 0% 98%;
   
-    --popover: 240 4% 8%;
+    --popover: 0 0% 12%;
     --popover-foreground: 0 0% 98%;
   
-    --primary: 77 100% 74%;
-    --primary-foreground: 0 0% 9%;
+    --primary: 153 60% 53%;
+    --primary-foreground: 0 0% 7%;
   
-    --secondary: 0 0% 14.9%;
+    --secondary: 0 0% 19%;
     --secondary-foreground: 0 0% 98%;
   
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
+    --muted: 0 0% 19%;
+    --muted-foreground: 0 0% 64%;
   
-    --accent: 0 0% 14.9%;
+    --accent: 0 0% 19%;
     --accent-foreground: 0 0% 98%;
   
     --destructive: 0 62.8% 30.6%;
@@ -26,9 +26,9 @@
     --warning: 31 98% 50%;
     --warning-foreground: 0 0% 98%;
   
-    --border: 345 4% 17%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --border: 0 0% 22%;
+    --input: 0 0% 22%;
+    --ring: 153 60% 53%;
   
     --radius: 0.5rem;
 
